# gmail-audit

./: .gitignore  README.md  SPEC.md  catalog.py  categories.yml  pyproject.toml
.github/workflows/: ci.yml
gmail_audit/: aggregator.py  auth.py  catalog.py  config.py  domain.py  gmail_client.py  main.py  output.py
scripts/: authorize.py
